--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-native": "0.64.3",
     "react-native-google-places-autocomplete": "^2.4.1",
     "react-native-maps": "0.28.1",
+    "react-native-maps-directions": "^1.8.0",
     "react-native-web": "0.17.1"
   },
   "devDependencies": {
